--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# local env files
-.env*.local
+# Testing
+/coverage
+coverage
 
-# vercel
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Vercel
 .vercel
 
-# typescript
+# Next.js
+/.next/
+/out/
+
+# Typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Production
+/build
+
+# Environment variables
+.env*
+!.env.example
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.pem
+*.local
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
