--- a/package.json
+++ b/package.json
@@ -35,17 +35,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@soundise/react-components": "^2.0.2",
     "next": "13.1.6",
     "nextra": "^2.2.14",
     "nextra-theme-docs": "^2.2.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.0-beta.11"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
