--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@soundise/react-components": "^2.0.2",
     "next": "13.1.6",
     "nextra": "^2.2.14",
